changes to help backporting to 1.16.5