@@ -2,6 +2,7 @@ package games.alejandrocoria.mapfrontiers.client.gui;
 
 import javax.annotation.ParametersAreNonnullByDefault;
 
+import org.apache.commons.lang3.StringUtils;
 import org.lwjgl.glfw.GLFW;
 
 import net.minecraft.client.gui.Font;
@@ -23,7 +24,7 @@ public class TextBox extends EditBox {
     public TextBox(Font font, int x, int y, int width, String defaultText) {
         super(font, x, y, width, 12, TextComponent.EMPTY);
         this.defaultText = defaultText;
-        if (!defaultText.isBlank()) {
+        if (!StringUtils.isBlank(defaultText)) {
             setResponder((value) -> updateDefaultText());
         }
         updateDefaultText();
@@ -31,7 +32,7 @@ public class TextBox extends EditBox {
 
     public void setResponder(TextBoxResponder responderIn) {
         responder = responderIn;
-        if (defaultText.isBlank()) {
+        if (StringUtils.isBlank(defaultText)) {
             this.setResponder((value) -> responder.updatedValue(this, value));
         } else {
             this.setResponder((value) -> {
